@@ -4,6 +4,8 @@ Changelog
 0.9 - unreleased
 ----------------
 
+- Correct the i18n domain of the employees tab action.
+  [hannosch]
 
 0.8 - 2010-12-04
 ----------------
